feat: Adição da API updateBin.
